fix spacing of the list

--- a/src/how-to-eat/HowToEat.css
+++ b/src/how-to-eat/HowToEat.css
@@ -11,6 +11,10 @@
     counter-reset: howto-ripe;
 }
 
+.HowToEat_list ul {
+    padding-left: 0;
+}
+
 .HowToEat_list li {
     list-style: none;
     font-size: 0.9rem;
